added like/dislike buttons to reviews

--- a/public/profile-page.html
+++ b/public/profile-page.html
@@ -14,6 +14,7 @@
     <link
     rel="stylesheet"
     href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body class="bg-light">
     <header class="p-3 bg-dark text-white">
@@ -75,21 +76,55 @@
                 <h4 class="row pl-3 pt-1">9.2/10</h4>  
                 <h3 class="row pl-3 pt-3">This movie is great!</h4>
                 <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
-                <p class="user-signature">-User 1234</p>
+                <div>
+                    <p class="user-signature">-User 1234</p>
+                    <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
+                    <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
+                 </div>
             </div>
             <div class="bg-white popular-reviews container mb-3">
                 <h4 class="row pl-3 pt-3">Movie Name</h4>
                 <h4 class="row pl-3 pt-1">9.2/10</h4>  
                 <h3 class="row pl-3 pt-3">This movie is great!</h4>
                 <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
-                <p class="user-signature">-User 1234</p>
+                <div>
+                    <p class="user-signature">-User 1234</p>
+                    <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
+                    <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
+                 </div>
             </div>
             <div class="bg-white popular-reviews container mb-3">
                 <h4 class="row pl-3 pt-3">Movie Name</h4>
                 <h4 class="row pl-3 pt-1">9.2/10</h4>  
                 <h3 class="row pl-3 pt-3">This movie is great!</h4>
                 <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
-                <p class="user-signature">-User 1234</p>
+                <div>
+                    <p class="user-signature">-User 1234</p>
+                    <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
+                    <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
+                 </div>
+            </div>
+            <div class="bg-white popular-reviews container mb-3">
+                <h4 class="row pl-3 pt-3">Movie Name</h4>
+                <h4 class="row pl-3 pt-1">9.2/10</h4>  
+                <h3 class="row pl-3 pt-3">This movie is great!</h4>
+                <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
+                <div>
+                    <p class="user-signature">-User 1234</p>
+                    <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
+                    <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
+                 </div>
+            </div>
+            <div class="bg-white popular-reviews container mb-3">
+                <h4 class="row pl-3 pt-3">Movie Name</h4>
+                <h4 class="row pl-3 pt-1">9.2/10</h4>  
+                <h3 class="row pl-3 pt-3">This movie is great!</h4>
+                <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
+                <div>
+                    <p class="user-signature">-User 1234</p>
+                    <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
+                    <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
+                 </div>
             </div>
         </div>
     </main>
