--- a/public/post-page.html
+++ b/public/post-page.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reel Insights - Movie Page</title>
+    <title>Reel Insights - Post</title>
     <link rel="stylesheet" href="./css/jass.css" />    
     <link rel="stylesheet" href="./css/style.css" />
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"
-  /> 
-  <link
+    crossorigin="anonymous"/> 
+    <link
     rel="stylesheet"
-    href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
-  />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
 </head>
 <body class="bg-light">
     <header class="p-3 bg-dark text-white">
@@ -61,56 +58,33 @@
             </div>
         </div>
     </header>
-
     <main>
-        <div id="movie-page" class="container d-flex">
-            <div>
-                <h4 id="movie-page-title">Moonlight (2016)</h4>
-                <h5>8.5/10</h5>
-                <p>Director: Barry Jenkins</p>
-                <p>Mahershala Ali, Naomie Harris, Trevante Rhodes</p>
-                <p id="movie-page-p">A young African-American man grapples with his identity and sexuality while experiencing the everyday struggles of childhood, adolescence, and burgeoning adulthood.</p>
-                <a href="/" class="nav-link">Submit a review</a>
-            </div>
-            <div>
-                <img id="movie-page-poster" href="/" src="./images/movie_poster.jpg" alt="Poster">
-            </div>
+        <div class="container">
+            <h4 id="post-movie-title">Moonlight (2016)</h4>
         </div>
-        <div id="reviews" class="container">
-            <div class="bg-white popular-reviews container mb-3">
-                <h4 class="row pl-3 pt-1">9.2/10</h4>  
-                <h3 class="row pl-3 pt-3">This movie is great!</h4>
-                <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
-                <div>
-                    <p class="user-signature">-User 1234</p>
-                    <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
-                    <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
-                 </div>
-            </div>
-            <div class="bg-white popular-reviews container mb-3">
-                <h4 class="row pl-3 pt-1">9.2/10</h4>  
-                <h3 class="row pl-3 pt-3">This movie is great!</h4>
-                <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
-                <div>
-                    <p class="user-signature">-User 1234</p>
-                    <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
-                    <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
-                 </div>
-            </div>
-            <div class="bg-white popular-reviews container mb-3">
-                <h4 class="row pl-3 pt-1">9.2/10</h4>  
-                <h3 class="row pl-3 pt-3">This movie is great!</h4>
-                <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
-                <div>
-                    <p class="user-signature">-User 1234</p>
-                    <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
-                    <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
-                 </div>
+        <div class="container">
+            <h4 id="username-review">USERNAME's Review</h4>
+        </div>
+        <div class="container">
+            <form>
+                <label for="title">Title:</label><br>
+                <input type="text" id="review-title" name="title" autocomplete="off" value=""><br>
+                <label for="comments">Comments:</label><br>
+                <textarea id="review-comments"></textarea>
+                <label for="score">Score:</label><br>
+                <div class="d-flex">
+                    <input type="text" id="review-score" name="score" autocomplete="off" value="">
+                    <p>/ 10</p>
+                </div>
+            </form>
+            <div>
+                <button class="review-form-button" type="button">Submit review</button>
+                <button class="cancel-button" type="button">Cancel</button>
             </div>
         </div>
     </main>
 
-    
+
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
