--- a/public/profile-page.html
+++ b/public/profile-page.html
@@ -3,20 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reel Insights - Movie Page</title>
+    <title>Reel Insights - Profile</title>
     <link rel="stylesheet" href="./css/jass.css" />    
     <link rel="stylesheet" href="./css/style.css" />
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-    crossorigin="anonymous"
-  /> 
-  <link
+    crossorigin="anonymous"/> 
+    <link
     rel="stylesheet"
-    href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
-  />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body class="bg-light">
     <header class="p-3 bg-dark text-white">
@@ -61,23 +59,20 @@
             </div>
         </div>
     </header>
-
     <main>
-        <div id="movie-page" class="container d-flex">
+        <div id="profile-page-top"class="container d-flex justify-content-between">
+            <div></div>
             <div>
-                <h4 id="movie-page-title">Moonlight (2016)</h4>
-                <h5>8.5/10</h5>
-                <p>Director: Barry Jenkins</p>
-                <p>Mahershala Ali, Naomie Harris, Trevante Rhodes</p>
-                <p id="movie-page-p">A young African-American man grapples with his identity and sexuality while experiencing the everyday struggles of childhood, adolescence, and burgeoning adulthood.</p>
-                <a href="/" class="nav-link">Submit a review</a>
+                <h4>USERNAME's Profile</h4>
             </div>
             <div>
-                <img id="movie-page-poster" href="/" src="./images/movie_poster.jpg" alt="Poster">
+                <a class="text-black" href="/">Logout</a>
             </div>
         </div>
-        <div id="reviews" class="container">
+        <div>
+            <!-- users reviews -->
             <div class="bg-white popular-reviews container mb-3">
+                <h4 class="row pl-3 pt-3">Movie Name</h4>
                 <h4 class="row pl-3 pt-1">9.2/10</h4>  
                 <h3 class="row pl-3 pt-3">This movie is great!</h4>
                 <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
@@ -88,6 +83,7 @@
                  </div>
             </div>
             <div class="bg-white popular-reviews container mb-3">
+                <h4 class="row pl-3 pt-3">Movie Name</h4>
                 <h4 class="row pl-3 pt-1">9.2/10</h4>  
                 <h3 class="row pl-3 pt-3">This movie is great!</h4>
                 <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
@@ -98,6 +94,29 @@
                  </div>
             </div>
             <div class="bg-white popular-reviews container mb-3">
+                <h4 class="row pl-3 pt-3">Movie Name</h4>
+                <h4 class="row pl-3 pt-1">9.2/10</h4>  
+                <h3 class="row pl-3 pt-3">This movie is great!</h4>
+                <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
+                <div>
+                    <p class="user-signature">-User 1234</p>
+                    <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
+                    <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
+                 </div>
+            </div>
+            <div class="bg-white popular-reviews container mb-3">
+                <h4 class="row pl-3 pt-3">Movie Name</h4>
+                <h4 class="row pl-3 pt-1">9.2/10</h4>  
+                <h3 class="row pl-3 pt-3">This movie is great!</h4>
+                <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
+                <div>
+                    <p class="user-signature">-User 1234</p>
+                    <button class="mb-3 btn"><i class="fa fa-thumbs-up"></i></button>
+                    <button class="mb-3 btn"><i class="fa fa-thumbs-down"></i></button>
+                 </div>
+            </div>
+            <div class="bg-white popular-reviews container mb-3">
+                <h4 class="row pl-3 pt-3">Movie Name</h4>
                 <h4 class="row pl-3 pt-1">9.2/10</h4>  
                 <h3 class="row pl-3 pt-3">This movie is great!</h4>
                 <p class="row pl-3 pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, ullam. Eaque adipisci, quos velit ad quia sit inventore iusto, consectetur iste deleniti alias deserunt laboriosam optio nisi nesciunt aliquam labore.</p>
@@ -110,7 +129,6 @@
         </div>
     </main>
 
-    
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
