--- a/public/search-results.html
+++ b/public/search-results.html
@@ -69,7 +69,7 @@
         </div>
         <div class="container mt-4 text-center">
             <div class="row mb-4">
-                <h4 id="results-h4" class="ml-0 pl-0 col-3">:</h4>
+                <h4 id="results-h4" class="ml-0 pl-0 col-3"></h4>
             </div>
         </div>
 
