--- a/public/search-results.html
+++ b/public/search-results.html
@@ -48,15 +48,25 @@
                 <h4 id="results-h4" class="ml-0 pl-0 col-3"></h4>
             </div>
         </div>
-
-
-        <div id="search-results" class="movie-results d-flex flex-wrap">
-            <div class="movie-card container d-flex">
-              <!-- <a href="/"><img id="movie-card-poster" href="/" src="./images/movie_poster.jpg" alt="Poster"></a>
-                <div class="container d-flex flex-column">
-                  <a href="/" class="movie-card-h4 text-black">Willy Wonka and The Chocolate Factory</a>
-                  <a href="/" class="movie-card-h4 text-black">(2016)</a>
-                </div> -->
+        <div class="container d-flex justify-content-center">
+            <input id="search-bar" class="col-12 mt-5 ml-5 mr-5 rounded" type="text" placeholder="Search for movies">
+        </div>
+        <div class="container mt-4 text-center">
+            <div class="row mb-4">
+                <h4 id="search-title" class="ml-0 pl-0 col-3">Results for:</h4>
+            </div>
+        </div>
+        <div class="container d-flex flex-column justify-content-center" id="search-results">
+            <!-- Movie cards will be inserted here -->
+            {{#if error}}
+            <p>{{error}}</p>
+            {{else}}
+            <h2>{{title}} ({{year}})</h2>
+            <p><strong>Director:</strong> {{director}}</p>
+            <p><strong>Plot:</strong> {{plot}}</p>
+            <img src="{{poster}}" alt="{{title}} Poster" style="width:200px;">
+            {{/if}}
+        </div>
             </div>
             
         </div>
